KUBERNETES/manifests/mysql-pvc.yml
apiVersion: v1
kind: Pod
metadata : 
  name: mysql-pod
  labels:
    app: bdd
spec:
  containers:
    - name: mysql-volume
      image: mysql
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-volume
        - mountPath: /opt
          name : data-opt
  volumes:
    - name : mysql-volume
      persistentVolumeClaim:
        claimName: mypvc
    - name : data-opt
      hostPath:
        path: /data-opt
        type: DirectoryOrCreate
