KUBERNETES/manifests/mysql-volume.yml
apiVersion: v1
kind: Pod
metadata : 
  name: mysql-volume
  labels:
    app: bdd
spec:
  containers:
    - name: mysql-volume
      image: mysql
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-volume
        - mountPath: /opt
          name : data-opt
  volumes:
    - name : mysql-volume
      hostPath:
        path: /data-volume
        type: DirectoryOrCreate
    - name : data-opt
      hostPath:
        path: /data-opt-volume
        type: DirectoryOrCreate
