KUBERNETES/manifests/pod-blue.yml
apiVersion: v1
kind: Pod
metadata : 
  name: webapp-blue
  labels:
    app: web
  namespace: production
spec:
  containers:
    - name: webapp-blue
      image: kodekloud/webapp-color
      ports:
        - containerPort: 8080
