KUBERNETES/manifests/pod.yml
apiVersion: v1
kind: Pod
metadata : 
  name: webapp-color
spec:
  containers:
    - name: webapp-color
      image: kodekloud/webapp-color
      ports:
        - containerPort: 8080
