KUBERNETES/manifests/webappcolor-pod.yml
apiVersion: v1
kind: Pod
metadata : 
  name: webapp-color
  labels:
    app: webapp-color
    env: prod
    formation: Frazer
spec:
  containers:
    - name: webapp-color
      image: kodekloud/webapp-color
      ports:
        - containerPort: 8080
