KUBERNETES/manifests/service-nodeport-web.yml
apiVersion: v1
kind: Service
metadata:
  name: srv-web
  namespace: production
  labels:
    app: web

spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30008
  selector:
    app: web
