KUBERNETES/manifests/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rule
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.frazer.com
    http:
      paths:
      - path: /nginx
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
        pathType: Prefix
      - path: /web
        backend:
          service:
            name: web-svc
            port:
              number: 8080
        pathType: Prefix
