KUBERNETES/manifests/ingress-webapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-rule
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.omar-webapp.com # omar-ajc.ddns.net
    http:
      paths:
      - path: /rouge
        backend:
          service:
            name: red-svc
            port:
              number: 8080
        pathType: Prefix
      - path: /bleu
        backend:
          service:
            name: blue-svc
            port:
              number: 8080
        pathType: Prefix
